# TP-Simulation-Stochastique-Parall-le

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main_gen_rand.cpp  main_monte_carlo.cpp  main_monte_carlo_thread.cpp
